src/test/ui/issues/issue-60075.stderr
error: expected one of `.`, `;`, `?`, `else`, or an operator, found `}`
  --> $DIR/issue-60075.rs:6:10
   |
LL |         });
   |          ^ expected one of `.`, `;`, `?`, `else`, or an operator

error: expected one of `async`, `const`, `crate`, `default`, `extern`, `fn`, `pub`, `type`, `unsafe`, `}`, or identifier, found `;`
  --> $DIR/issue-60075.rs:6:11
   |
LL |     fn qux() -> Option<usize> {
   |                               - unclosed delimiter
LL |         let _ = if true {
LL |         });
   |           ^ help: `}` may belong here

error: aborting due to 2 previous errors

